--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
     <div id="level-up-modal" class="hidden">
       <h2>레벨 업!</h2>
-      <p>업그레이드를 선택하세요 · 1, 2, 3 키로 선택 가능</p>
+      <p>업그레이드를 선택하세요</p>
+      <p class="key-hint">[ 1 ] [ 2 ] [ 3 ] 키로 선택 가능</p>
       <div id="level-up-choices"></div>
     </div>
 
